--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         celsius = parseInt(celsius);
         var fahrenheit = (9 / 5) * celsius + 32;
         alert(fahrenheit + " fahrenheit" );
+        
+        var admin;
+        var name = "Василий";
+        admin = name;
+        console.log(admin);
+        
+        //будет равно 1000108
+        console.log(1000+"108")
     </script>
 </body>
 </html>
