--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         console.log(admin);
         
         //будет равно 1000108
-        console.log(1000+"108")
+        console.log(1000+"108");
     </script>
 </body>
 </html>
